# glifo-analise

./: .coverage  .dockerignore  .gitignore  404.html  AGENTS.md  CITATION.bib  CITATION.cff  LICENSE  README.md  gui.py  index.html  main.py  main_legacy.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docker/: Dockerfile  docker-compose.yml  manage.sh
docs/: glifos.md  index.md
docs/specs/: arquitetura.md  requisitos.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/static/: viewer3d.html
frontend/src/: App.vue
frontend/src/components/: GlyphPickerModal.vue
frontend/src/router/: index.ts
frontend/src/stores/: analysis.ts  candidates.ts  model3d.ts
frontend/src/views/: AnalysisView.vue  CandidatesView.vue  DetailView.vue  Model3DView.vue  VisualizationView.vue
glifo_analise/: __init__.py  config.py  models.py
glifo_analise/analysis/: __init__.py  bitmap.py  iso.py  physical.py  resolution.py
glifo_analise/api/: __init__.py  main.py  state.py  ws.py
glifo_analise/api/routes/: __init__.py  analysis.py  candidates.py  files.py  model3d.py  visualization.py
glifo_analise/cli/: __init__.py  display.py  main.py  prompts.py
glifo_analise/gui/: __init__.py  app.py
glifo_analise/gui/static/: viewer3d.html
glifo_analise/gui/static/three/: ThreeMFLoader.js
glifo_analise/output/: __init__.py  grid.py  model3d.py  persistence.py  preview.py
glifos/: index.html
output/: candidatos_viaveis.json  tatil_3d_10x12_2.5mm_TESTE_COMPLETO.stl  tatil_3d_10x12_3.5mm_tqlDà.3mf  tatil_3d_13x13_2.5mm_tqlDà.3mf  tatil_3d_13x13_3.0mm_tqlDà.3mf  tatil_3d_8x8_3.0mm_TESTE_COMPLETO.3mf  tatil_3d_8x8_3.0mm_tqlDà.3mf
scripts/: dev.sh  generate_glyph_images.py  start.sh
search/: search_index.json
specs/: architecture.md  requirements.md  roadmap.md
specs/arquitetura/: index.html
specs/requisitos/: index.html
specs/roadmap/: index.html
tests/: conftest.py  test_api_analysis.py  test_api_candidates.py  test_api_model3d.py  test_api_visualization.py  test_bitmap.py  test_config.py  test_grid.py  test_iso.py  test_models.py  test_persistence.py  test_physical.py  test_preview.py  test_resolution.py
