[project]
name = "glifo-analise"
version = "0.1.0"
description = "Análise de resolução mínima para glifos de fonte TTF em dispositivo matricial"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.61.1",
    "lxml>=6.0.2",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "trimesh>=4.11.2",
]

[project.scripts]
glifo-analise = "main:main"
